--- a/_01/index.html
+++ b/_01/index.html
@@ -10,10 +10,11 @@
   <link rel="stylesheet" href="./styles/global.css">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/form.css">
+
+
 </head>
 
 <body>
-
   <div class="container">
     <div class="content">
       <img src="./assets/logo-grab.svg" alt="logo">
@@ -25,7 +26,7 @@
             <label for="email" hidden>Email</label>
             <input required type="email" id="email" />
             <img src="./assets/icons/subtract.svg" alt="@">
-            <span class="error"></span>
+            <span class="error active"></span>
           </div>
 
           <div class="input-group">
