--- a/_02/index.html
+++ b/_02/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grab - SignIn</title>
+  <title>Grab - Login</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/global.css">
-  <link rel="stylesheet" href="./styles/signin.css">
+  <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/form.css">
 </head>
 
@@ -23,29 +23,25 @@
 
           <div class="input-group">
             <label for="email" hidden>Email</label>
-            <input required type="email" id="email" name="email" />
+            <input required type="email" id="email" />
             <img src="./assets/icons/subtract.svg" alt="@">
             <span class="error"></span>
           </div>
 
           <div class="input-group">
             <label for="password" hidden>Password</label>
-            <input required type="password" id="password" name="password" />
+            <input required type="password" id="password" />
             <img src="./assets/icons/lock.svg" alt="lock">
             <span class="error"></span>
           </div>
-          <button type="button" onclick="signIn()">Entrar</button>
-          <div class="forgot">
-            <a href="#">Problemas para entrar? Click aqui</a>
-          </div>
+
+          <button type="submit">Entrar</button>
         </form>
-
-
       </main>
 
       <footer>
-        <img src="./assets/icons/log-in.svg" alt="SignIn">
-        <a href="./signUp.html">Criar conta</a>
+        <p>Problemas para entrar?</p>
+        <a href="#">Click aqui</a>
       </footer>
     </div>
 
